--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "public": true,
   "functions": {
-    "lib/main.dart": { "runtime": "vercel-dev-runtime@0.0.3" }
+    "lib/**/*.dart": { "runtime": "vercel-dev-runtime@0.0.3" }
   }
 }
